# fan-controllerd

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
config/: config.toml.example  default.toml  r630.toml  r730.toml
debian/: postinst  prerm
src/: config.rs  control.rs  ipmi_fan.rs  lib.rs  main.rs  safety.rs
src/sensors/: hwmon.rs  ipmi.rs  mod.rs
systemd/: fan-controllerd.service
