[package]
name = "fan-controllerd"
version = "0.2.0"
edition = "2021"
description = "Dynamic fan controller daemon for Dell R630/R730 servers via IPMI"
license = "MIT"
authors = ["mcarey <mcarey@solcore.net>"]

[[bin]]
name = "fan-controllerd"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
signal-hook = "0.3"
sd-notify = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[package.metadata.deb]
maintainer = "mcarey <mcarey@solcore.net>"
copyright = "2026 mcarey"
license-file = ["LICENSE", "0"]
extended-description = """\
fan-controllerd dynamically controls Dell R630/R730 chassis fans via IPMI \
based on CPU package, NVMe, and IPMI exhaust/inlet temperatures. \
Uses a piecewise-linear curve per sensor with slew-rate limiting, and \
restores BMC automatic fan control on any exit as a safety guard."""
depends = "$auto, ipmitool, dmidecode"
section = "admin"
priority = "optional"
# /etc/fan-controllerd/config.toml is NOT shipped in the package starting in
# v0.2.0 — postinst creates it from a per-hardware template. Upgrading from
# v0.1.x: dpkg sees the conffile is gone from the new package and leaves the
# user's existing file in place (Debian policy 10.7.3).
assets = [
  ["target/release/fan-controllerd", "usr/sbin/", "755"],
  ["config/r630.toml", "usr/share/fan-controllerd/configs/", "644"],
  ["config/r730.toml", "usr/share/fan-controllerd/configs/", "644"],
  ["config/default.toml", "usr/share/fan-controllerd/configs/", "644"],
  ["systemd/fan-controllerd.service", "lib/systemd/system/", "644"],
  ["LICENSE", "usr/share/doc/fan-controllerd/", "644"],
]
maintainer-scripts = "debian/"
